# persAssis

./: .dockerrc  .env.example  .gitignore  Readme.md  docker-compose.yaml  prompts.db  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
backend/: Dockerfile  Readme.md  main.py  prompts.db  pyproject.toml  requirements.txt  setup.py
backend/.github/: copilot-instructions.md
backend/agents/: base.py  reasoner.py  verifier.py
backend/app/: config.py  database.py  main.py  prompts_loader.py
backend/app/agents/: __init__.py  reasoner.py  tool_router.py  verifier.py
backend/app/graph/: agent_graph.py
backend/app/llm/: local_llm.py
backend/app/models/: prompt_model.py
backend/app/schemas/: __init__.py  prompt_schema.py
backend/graph/: agent_graph.py
frontend/: Dockerfile  Readme.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/.github/: copilot-instructions.md
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: QueryInput.tsx  QueryResult.tsx
frontend/src/hooks/: useAssistant.ts
frontend/src/pages/: Home.tsx  PromptsManager.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
